# spuhi

./: .gitignore  README.md  requirements.txt
data/pedestrian_datasets/.unified_data_cache/eupeds_eth/: scenes_list.dill
data/pedestrian_datasets/.unified_data_cache/eupeds_eth/biwi_eth_train/: agent_data_dt0.40.feather
data/pedestrian_datasets/.unified_data_cache/eupeds_eth/biwi_eth_val/: agent_data_dt0.40.feather
src/support_pred/: CMakeLists.txt
src/support_pred/src/: Logger.cpp
src/support_pred/tests/: support_verification.ipynb
src/traj_pred/: README.md  pyproject.toml  setup.py  train_model.sh  trajectory_predictor.py
src/traj_pred/config/: pedestrians.json
src/traj_pred/data/: preprocess_data.py
src/traj_pred/docs/: Trajectron+SNCE_model.txt
src/traj_pred/dynamics/: __init__.py  linear.py  single_integrator.py  unicycle.py
src/traj_pred/modules/: __init__.py  discrete_latent.py  encoder.py  gmm2d.py
src/traj_pred/src/support_pred/include/: Logger.h
src/traj_pred/src/support_pred/src/: HalfplaneIntersectionProcessor.cpp
src/traj_pred/src/support_pred/tests/: custom_data.ipynb  custom_data.py
src/traj_pred/src/traj_pred/: __init__.py  train.py
src/traj_pred/src/traj_pred/dynamics/: state_delta.py
src/traj_pred/src/traj_pred/modules/: decoder.py  mgcvae.py  model_registrar.py  snce.py
src/traj_pred/tests/: playground.ipynb  test_device.py  test_snce.ipynb
src/traj_pred/utils/: __init__.py  argument_parser.py  comm.py  evaluation.py  model_utils.py  sc_sampling.py  trajectory_utils.py
(+5 files in other folders)
